Russian translation update to r9721
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9723 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/ru/foxtrick.properties
+++ b/content/locale/ru/foxtrick.properties
@@ -1,6 +1,6 @@
 #used by translators to keep track. not used with foxtrick atm
 properties.language=Russian
-properties.version=r9526
+properties.version=r9721
 properties.translators=_KOHb_ [teamId=28914]
 
 # Hints:
@@ -376,9 +376,10 @@ module.ShowLineupSet.Winning.desc=Посвечивать выигравшие к
 module.SupporterStatsEnhancements.desc=Подсвечивать всё ещё находящихся в команде игроков на странице статистики
 module.MobileEnhancements.desc=Набор улучшений для мобильных устройств
 module.MatchOrderInterface.desc=Улучшения интерфейса отдачи указаний на матч.
-module.MatchOrderInterface.PlayedLastMatch.desc=Подсвечивать игравших в предыдущем матче игроков и показывать игровую позицию и сыгранное время в окне с навыками
-module.MatchOrderInterface.PlayedLastMatch.alsoOnField.desc=Также подсвечивать на поле
-module.MatchOrderInterface.PlayedLastMatch.disableForTournaments.desc=Не учитывать матчи турниров
+module.MatchOrderInterface.GotTrainingOnField.desc=Игроки, уже получившие тренировку, будут также отмечены на поле (только для supporters)
+module.MatchOrderInterface.DisplayLastMatchInDetails.desc=Показывать информацию о последнем матче в окне с навыками
+module.MatchOrderInterface.CloneOrder.desc=Добавить ссылку для клонирования указаний на матч
+module.MatchOrderInterface.AutoExpandCloned.desc=Автоматически разворачивать склонированную расстановку
 module.MatchOrderInterface.Specialties.desc=Показывать специализации игроков
 module.MatchOrderInterface.ShowFaces.desc=Показывать лица игроков вместо футболок для будущих и прошлых расстановок
 module.MatchOrderInterface.StayOnPage.desc=Оставаться на странице указаний после отправки
@@ -398,10 +399,21 @@ module.SafeForWork.desc=Заменяет значок и заголовок вк
 module.PlayerStatsExperience.desc=Показывать подуровень опыта на странице статистики игрока
 module.PlayerStatsExperience.AlwaysShowAll.desc=Показывать по умолчанию так много матчей как возможно при нажатии на ссылку на странице игрока или на странице истории выступлений
 module.YouthTwins.desc=Показывать количество возможных близнецов для игроков юношеской команды (в сотрудничестве с hattrick youthclub). Для использования этого модуля иметь аккаунт на hattrick youthclub не обязательно. Т.к. для определения близнецов необходимо знать лица игроков, эта возможность может быть использована только подписчиками Hattrick supporter.
+module.YouthTwins.HideInfoLink.desc=Отключить информационную ссылку для новых игроков
+#accessability
+module.ARIALandmarks.desc=Добавить метки ARIA ко всем секциям сайта для облегчения навигации при использовании планшетных компьютеров
+
+module.TransferHistoryFilters.desc=Добавить фильтры для истории трансферов команды
 # -----------------------------------------------------------------------------
 
 
 # IN-GAME STRINGS. translate first
+
+#transfer-history-filters
+TransferHistoryFilters.all=Все
+TransferHistoryFilters.sold=Проданные
+TransferHistoryFilters.bought=Купленные
+TransferHistoryFilters.filter=Фильтр:
 
 #Loyalty display
 LoyaltyDisplay.motherClubBonus=(Бонус родного клуба)
@@ -413,6 +425,7 @@ YouthTwins.markedTwins=Отмечены как близнецы: %1
 YouthTwins.nonTwins=Отмечены как не-близнецы: %1
 YouthTwins.undecidedTwins=Ещё не отмечены: %1
 YouthTwins.nonHyUser=Вы можете найти больше информации о его потенциале на сайте hattrick youthclub.
+YouthTwins.infoText=Кто такие близнецы и какую выгоду от знания о них я могу получить?
 
 #PlayerStatsExperience
 PlayerStatsExperience.ExperienceText=Уже получил от %1 до %2 (из 28) очков опыта. Его опыт - между %3 и %4.
@@ -658,6 +671,14 @@ matchOrder.home=Дома
 matchOrder.home.abbr=Д
 matchOrder.away=В гостях
 matchOrder.away.abbr=Г
+matchOrder.cloneOrder=Склонировать эту расстановку
+matchOrder.cloneOrder.abbr=К
+matchOrder.cloneAsSub=Склонировать и преобразовать в замены
+matchOrder.cloneAsSub.abbr=З
+matchOrder.cloneAsSwap=Склонировать и поменять фланги
+matchOrder.cloneAsSwap.abbr=Ф
+matchOrder.cloneAsChange=Склонировать и преобразовать в изменение поведения
+matchOrder.cloneAsChange.abbr=П
 
 #Skills
 Playmaking=Полузащита
@@ -1167,6 +1188,7 @@ tab.alert=Уведомления
 tab.about=О расширении
 tab.changes=Изменения
 tab.help=Помощь
+tab.accessibility=Спец. возможности
 
 prefs.setup=Установки
 prefs.setup.desc=Эти значения были автоматически определены FoxTrick-ом. Если они неверны, {пожалуйста, сообщите нам}.
