--- a/content/locale/ru/release-notes.xml
+++ b/content/locale/ru/release-notes.xml
@@ -13,14 +13,33 @@
 		<item>Пожалуйста, смотрите <xhtml:a href="http://code.google.com/p/foxtrick/source/list">историю изменений</xhtml:a> на сайте Google Code для полного списка изменений.</item>
 	</note>
 
+	<note version="0.9.4">
+		<item>● Новый модуль <module>TransferHistoryFilters</module>: позволяет показывать только проданных или только купленных игроков. Доступно только для истории трансферов команды, не для игроков (включен по умолчанию)</item>
+		<item>● Модуль <module>PlayerStatsExperience</module>: новая версия раскраски с большим количеством деталей и обратной связью при надёжности данных (благодарим SeanConnery (7751762) за тестирование цвета для пользователей, страдающих дейтеранопией - невосприимчивостью к красной и зелёной части спектра).</item>
+		<item>● Модуль <module>MatchOrderInterface</module>: возможность для клонирования существующей расстановки.</item>
+		<item>● Небольшие изменения внешнего вида и стилей css</item>
+		<item>● Модуль <module>YouthTwins</module>: добавлен параметр для скрытия информации о близнецах (по умолчанию выключен)</item>
+		<item>● Модуль <module>StaffMarker</module>: теперь для получения списка администраторов Hattrick Youthclub используется сайт Google Code вместо перегруженных серверов HY</item>
+		<item>● Модуль <module>MatchPlayerColouring</module>: теперь работает корректно и для игроков, проведших неполный предыдущий матч</item>
+		<item>● Модуль <module>TeamPopupLinks</module>: небольшое изменение стиля для лучшей интеграции в общую картину hattrick.org</item>
+		<item></item>
+		<item><xhtml:b>Для пользователей с нарушениями зрения или слуха</xhtml:b></item>
+		<item>Мы добавили новую секцию на страницу настроек, на которую поместили все модули, относящиеся к специальным возможностям.</item>
+		<item>● Новый модуль <module>ARIALandmarks</module>: добавляет на сайт навигацию ARIA. Это должно помочь с навигацией по сайту при использовании планшетных компьютеров. Оба основных окна навигации и список подписанных форумов получили роль "navigation". Главное окно - роль "main". Все боковые окна с дополнительной информацией и ссылками - "complementary". Ссылки на глобальный поиск и поиск по форуму - конечно, роль "search".</item>
+		<item>Если у вас есть дальнейшие предложения - не стесняйтесь связываться с нами. Мы также просматриваем форум Hattrick Access.</item>
+	</note>
+
 	<note version="0.9.3">
+		<item>● Большое количество обновлений переводов благодаря потрясающим пользователям Foxtrick. Большое вам спасибо. Пожалуйста, продолжайте обновлять переводы на <xhtml:a href="http://www.crowdin.net/project/foxtrick">http://www.crowdin.net</xhtml:a>.</item>
 		<item>● Новый модуль <module>YouthTwins</module>: показывает количество возможных/отмеченных/не близнецов на странице игроков юношеской команды для supporter-ов (в сотрудничестве с hattrick youthclub)</item>
 		<item>● Модуль <module>MatchOrderInterface</module>: параметр для показа лиц игроков вместо рубашек для будущих и прошлых расстановок (включен по умолчанию)</item>
 		<item>● Модуль <module>MatchOrderInterface</module>: добавлен параметр (включён по умолчанию) для исключения матчей турнира из информации о последних матчах и подсветки</item>
+		<item>● Модуль <module>MatchIncome</module>: поддержка увеличения стоимости билетов начиная с 49 сезона. Доход от продажи билетов теперь подсчитывается по ценам, действовавшим во время матча.</item>
 		<item>● Модуль <module>MatchOrderInterface</module>: исправлена ошибка с нерабочим индикатором playedLastMatch в Firefox</item>
 		<item>● Модуль <module>MatchOrderInterface</module>: убрана подстветка игроков, игравших в последнем матче, поскольку разрешение на это отозвано :( (но вскоре появится замена от HT - только для supporter-ов)</item>
 		<item>● Модуль <module>PlayerStatsExperience</module>: исправлена ошибка с учётом полученной красной карточки как пропуска игры из-за технического поражения</item>
 		<item>● Модуль <module>PlayerStatsExperience</module>: исправлена работа модуля в Firefox 3.6</item>
+		<item>● Модуль <module>CustomMedals</module>: исправлено исчезновение турнирных трофеев</item>
 	</note>
 
 	<note version="0.9.2">
