*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/branches/0.9.3@9738 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/es-ES/foxtrick.properties
+++ b/content/locale/es-ES/foxtrick.properties
@@ -166,6 +166,7 @@ module.MatchPlayerColouring.SeparateOwnPlayerColors.desc=Separa de color los jug
 module.MatchReportFormat.desc=Presenta el informe del partido línea a línea de acuerdo a los eventos de partido.
 module.MatchReportFormat.ShowEventIcons.desc=Agregar iconos de evento específicos.
 module.MatchReportFormat.SeparateOwnTeamColors.desc=Separa el color del propio equipo
+module.LiveMatchReportFormat.desc=Mostrar los reportes de HT-Live y HR-ReLive linea por linea segun los eventos del partido con sus respectivos iconos.
 module.ForumRedirManagerToTeam.desc=Redirigir de la página del manager a la del equipo en los links de la conferencia
 module.ManagerButtons.desc=Añade o modifica botones de manager el la página del equipo y del manager
 module.ManagerButtons.GuestBook.desc=Añade link para escribir en el libro de visitas en la página del equipo y del manager
@@ -375,6 +376,8 @@ module.SupporterStatsEnhancements.desc=Highlights current squad players in suppo
 module.MobileEnhancements.desc=Conjunto de mejoras para dispositivos móviles
 module.MatchOrderInterface.desc=Ajustes en la interfase de órdenes de partido.
 module.MatchOrderInterface.PlayedLastMatch.desc=Destaca los jugadores que jugaron en el último partido y muestra la última posición y el tiempo jugado en los detalles
+module.MatchOrderInterface.PlayedLastMatch.alsoOnField.desc=Resaltar en el campo
+module.MatchOrderInterface.PlayedLastMatch.disableForTournaments.desc=Deshabilitar para partidos de torneo
 module.MatchOrderInterface.Specialties.desc=Mostrar especialidades de jugadores
 module.MatchOrderInterface.ShowFaces.desc=Mostrar caras de los jugadores en lugar de la camiseta para alineaciones anteriores y futuras
 module.MatchOrderInterface.StayOnPage.desc=Permanecer en la página de órdenes del partido después de guardarla
@@ -414,6 +417,7 @@ PlayerStatsExperience.ExperienceText=Ya recogió entre %1 y %2 de 28 puntos de e
 PlayerStatsExperience.NotAllMatchesVisible=El valor real podría ser mayor debido a que no todos los partidos se muestran.
 PlayerStatsExperience.NoSkillUpFound=El valor real podría ser mayor porque no se ha encontrado ninguna experiencia de aumento de habilidades registrada.
 PlayerStatsExperience.ExperienceChange.title=Ganancia de experiencia
+PlayerStatsExperience.ExperienceChange.title.abbr=EX+
 PlayerStatsExperience.Walkover=Este partido fue un walkover. Por lo tanto, los jugadores no obtienen experiencia.
 
 #Series statistics
@@ -623,7 +627,9 @@ matchOrder.attVsDef.title=Despliega tanto rendimiento de oponentes como ataque-v
 matchOrder.summary=Resumen
 matchOrder.tournamentMatch=Torneo
 matchOrder.homeAway=Autodetectar, agregar equipo de local o equipo de visita?
+matchOrder.homeAway.abbr=H/A
 matchOrder.default=Defecto
+matchOrder.default.abbr=D
 matchOrder.home=Local
 matchOrder.home.abbr=L
 matchOrder.away=Visita
@@ -682,13 +688,19 @@ match.pos.rb.abbr=LD
 match.pos.lw=Extremo izquierdo
 match.pos.lw.abbr=LI
 match.pos.lcm=Mediocampista Central Izquierdo
+match.pos.lcm.abbr=MI
 match.pos.mcm=Mediocampista Central al medio
+match.pos.mcm.abbr=MC
 match.pos.rcm=Mediocampista Central Derecho
+match.pos.rcm.abbr=MD
 match.pos.rw=Extremo derecho
+match.pos.rw.abbr=LD
 match.pos.lf=Delantero izquierdo
 match.pos.lf.abbr=LI
 match.pos.mf=Delantero centro
+match.pos.mf.abbr=MO
 match.pos.rf=Delantero derecho
+match.pos.rf.abbr=DD
 
 match.role.setPieces=Lanzador de BP
 match.role.setPieces.abbr=SP
@@ -727,7 +739,9 @@ Stamina.abbr=Con
 Form=forma
 Form.abbr=Fo
 Loyalty=Fidelidad
+Loyalty.abbr=Lo
 MotherClubBonus=Bono de Club Madre
+MotherClubBonus.abbr=MD
 Status=Estado
 Status.abbr=Estado
 Yellow_card=Tarjeta amarilla
@@ -741,6 +755,7 @@ Last_match.abbr=Último
 Last_stars=Última calificación
 Last_stars.abbr=Cal
 Last_stars_EndOfGame=Ultimas estrellas al final de la partida
+Last_stars_EndOfGame.abbr=Rt
 Last_stars_decline=Último descenso estrella
 Last_stars_decline.abbr=Dif
 Last_position=Última posición
