--- a/content/locale/ko/release-notes.xml
+++ b/content/locale/ko/release-notes.xml
@@ -12,13 +12,15 @@
 <note version="nightly" localized-version="개발 빌드">
 <item>자세한 내용은 Google Code의 <xhtml:a href="http://code.google.com/p/foxtrick/source/list">보고 기록</xhtml:a>을 참조하세요.</item>
 </note>
-
 <note version="0.9.4">
 <item>● NEW: <module>TransferHistoryFilters</module>: 샀거나 팔린 선수들의 이적들만 필터링하는 것을 허용합니다. 선수 기록이 아닌 클럽 기록만 가능합니다(기본 활성화)</item>
+<item>● NEW: <module>FriendlyPool</module>: 친선 경기 풀 안의 방문한 나라를 색칠합니다. (서포터즈만, 기본 활성화)</item>
 <item>● PlayerStatsExperience: 새 버전에 환상적인 기능이 추가되었습니다. 신뢰할 수 있는 데이터가 있다면 더욱 자세하고 컬러풀한 피드백을 얻을 수 있습니다. (적록색맹 유저를 위해 테스트 해주신 SeanConnery (7751762)에게 감사 드립니다)</item>
 <item>● 몇 가지 layouting/css을 조금 변경하였습니다.</item>
 <item>● YouthTwins: 쌍둥이에 대한 링크 정보를 숨기는 옵션을 추가하였습니다.(기본 비활성화)</item>
 <item>● StaffMarker: 해트트릭 유스클럽 서버 접근을 줄이기 위해 이제 HY 스탭 정보를 Google Code을 통해 얻습니다.</item>
+<item>● MatchPlayerColouring: 경기 종료 전에 경기장에 들어오고 나간 선수에 대해서도이제 제대로 동작합니다.</item>
+<item>● TeamPopupLinks: hattrick.org의 느낌과 전체적으로 잘 어울리게 몇 가지를 재스타일링 했습니다</item>
 <item></item>
 <item><xhtml:b>시각 또는 청각 장애우분들을 위해</xhtml:b></item>
 <item>우리는 설정 페이지에 접근성과 관련된 모든 모듈을 포함할 영역을 추가하였습니다.</item>
