*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/branches/0.9.3@9784 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/es-CR/foxtrick.properties
+++ b/content/locale/es-CR/foxtrick.properties
@@ -739,7 +739,7 @@ Stamina=Condición
 Stamina.abbr=Con
 Form=Form
 Form.abbr=Fo
-Loyalty=Lelatad
+Loyalty=Lealtad
 Loyalty.abbr=Le
 MotherClubBonus=Bono de club madre
 MotherClubBonus.abbr=BCM
