*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/branches/0.9.3@9835 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/gl/foxtrick.properties
+++ b/content/locale/gl/foxtrick.properties
@@ -654,7 +654,7 @@ TransferSearchResultFilters.days=Días\:
 
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
 RapidId.view=Ver
-RapidId.viewById=Ver por ID
+RapidId.viewById=Buscar ID
 RapidId.senior=Primeiro Equipo
 RapidId.youth=Xuvenís
 RapidId.tournaments=Torneos
