*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/branches/0.9.3@9851 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -177,6 +177,9 @@ module.TeamStats.General.desc=Allgmeine Information (TSI/Alter)
 module.TeamStats.Speciality.desc=Spezialitäten
 module.TeamStats.Personality.desc=Personalität
 module.TeamStats.Status.desc=Status (Karten/Verletzungen)
+module.TeamStats.Attributes.desc=Eigenschaft
+module.TeamStats.Skills.desc=Fähigkeit
+module.TeamStats.Match.desc=Spiel
 module.TeamStats.Current_league.desc=Aktuelle Liga
 module.ExtraPlayerInfo.desc=Zusätzliche Spielerinformationen auf der Spielerseite anzeigen
 module.ExtraPlayerInfo.CoachInfo.desc=Anzeige der Ausrichtung des aktuellen bzw. der ehemaligen Trainer
