--- a/content/locale/sr/release-notes.xml
+++ b/content/locale/sr/release-notes.xml
@@ -6,17 +6,17 @@
      instead of <a>. -->
 <!-- For each note, keep the attribute "version" unchanged, and you could
      translate the "localized-version" attribute. -->
-
+а
 <notes xmlns:xhtml="http://www.w3.org/1999/xhtml">
-<note version="nightly" localized-version="Тест верзија">
-<item>За детаље о променама погледајте  на <xhtml:a href="http://code.google.com/p/foxtrick/source/list">Google Code</xhtml:a> сајту.</item>
-</note>
-
 <note version="0.9.3">
+<item>● НОВО: <module>YouthTwins</module>: Приказује број могућих близанаца на страници са играчима омладинског тима (само за супортере у сарадњи са 'hattrick youthclub')</item>
 <item>● <module>MatchOrderInterface</module>: Опција за искључивање означавања и приказивање информација за мечеве на турнирима</item>
 <item>● <module>MatchOrderInterface</module>: Исправљена грешка због које се у Фајерфоксу нису коректно приказивали играчи који су играли на претходном мечу</item>
+<item>● <module>MatchOrderInterface</module>: Уклоњена опција за означавање играча који су играли на претходном мечу на захтев ХТ особља :( (ХТ уводи своју верзију означавања само за супортере)</item>
+<item>● <module>MatchIncome</module>: Подршка за повећање цена карата у сезони 49. Приход се сада калулише на основу цене карти на дан када је меч одигран.</item>
 <item>● <module>PlayerStatsExperience</module>: Исправљена грешка за играче који су добили црвени картон код којих су ови мечеви детектовани као да су завршени службеним резултатом</item>
 <item>● <module>PlayerStatsExperience</module>: Исправљена грешка због које модул није радио на Фајерфоксу 3.6</item>
+<item>● <module>CustomMedals</module>: Исправка за грешку 'нестајања' турнирских трофеја</item>
 </note>
 
 <note version="0.9.2">
