Serbian Translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9857 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -379,6 +379,8 @@ module.MobileEnhancements.desc=Побољшања за мобилне телеф
 module.MatchOrderInterface.desc=Мења интерфејс за издавање налога. Сенчи играче који су већ играли на тренинг позицијама у текућој недељи и приказује разлику између предвиђених оцена.
 module.MatchOrderInterface.GotTrainingOnField.desc=Додатно означи и у постави за меч, играче који су већ играли на тренинг позицијама у текућој недељи(само за супортере)
 module.MatchOrderInterface.DisplayLastMatchInDetails.desc=Прикажи информације о последњем мечу у прозору са детаљима о играчу
+module.MatchOrderInterface.CloneOrder.desc=Додај линк за клонирање индивидуалних налога
+module.MatchOrderInterface.AutoExpandCloned.desc=Аутоматски приказуј клонирани налог са више детаља
 module.MatchOrderInterface.Specialties.desc=Прикажи специјалност играча
 module.MatchOrderInterface.ShowFaces.desc=Прикажи слике играча уместо дресова у меч налозима и извештајима са мечева
 module.MatchOrderInterface.StayOnPage.desc=Остани на страници са налозима када сачуваш поставу
@@ -684,6 +686,14 @@ matchOrder.home=Домаћин
 matchOrder.home.abbr=Д
 matchOrder.away=Гост
 matchOrder.away.abbr=Г
+matchOrder.cloneOrder=Клонирај налог
+matchOrder.cloneOrder.abbr=КН
+matchOrder.cloneAsSub=Клонирај као нову измену
+matchOrder.cloneAsSub.abbr=КНИ
+matchOrder.cloneAsSwap=Клонирај као нову замену позиција
+matchOrder.cloneAsSwap.abbr=КНЗП
+matchOrder.cloneAsChange=Клонирај као нови став
+matchOrder.cloneAsChange.abbr=КНС
 
 #Skills
 Playmaking=Плејмејкинг
@@ -1268,14 +1278,3 @@ prefs.revokePermissions.ask=Да ли сте сигурни да желите д
 prefs.getPermissions.alert=За %s је потребна дозвола да би радио. Дозволите приступ у наредном прозору. Уколико не дозволите приступ, модул ће остати искључен.
 
 ###EOF
-
-module.MatchOrderInterface.CloneOrder.desc=Додај линк за клонирање индивидуалних налога
-module.MatchOrderInterface.AutoExpandCloned.desc=Атоматски приказуј клонирани налог са више детаља
-matchOrder.cloneAsSwap=Клонирај као репозиционирање
-matchOrder.cloneAsSwap.abbr=КР
-matchOrder.cloneAsSub=Клонирај као нову измену
-matchOrder.cloneAsSub.abbr=КНИ
-matchOrder.cloneOrder=Клонирај као нови став
-matchOrder.cloneOrder.abbr=КНС
-matchOrder.cloneAsChange=Клонирај као нову замену позиција
-matchOrder.cloneAsChange.abbr=КНЗП
