Serbian Translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9858 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -1264,6 +1264,7 @@ link.recentChanges=Последње промене
 releaseNotes.show=Прикажи поруку о променама после ажурирања Фокстрика
 releaseNotes.showFor=Прикажи промене у верзији:
 releaseNotes.version=Верзија\:
+releaseNotes.translationStatus=Фокстрик је на ваш језик преведен %s%
 
 about.copyright=Ауторска права
 about.maintainers=Oдржавање и развој
