--- a/content/locale/ko/faq.xml
+++ b/content/locale/ko/faq.xml
@@ -14,6 +14,47 @@
                         </xhtml:p>
                 </answer>
         </item>
+        <item id="sound-format">
+                <question>경보 사운드로 사용 가능한 파일 포맷을 무엇입니까?</question>
+                <answer>
+                        <xhtml:p>
+                            많은 브라우저가 각기 다른 파일 포맷을 허용합니다. 여기에 목록이 있습니다(목록에 없는 포맷은 적당한 플러그인을 설치했으면 작동할 것입니다. 예를 들어 Quicktime은 Firefox에서 mp3를 재생):
+                        </xhtml:p>
+                        <xhtml:p>
+                                Mozilla: wav, ogg
+                        </xhtml:p>
+                        <xhtml:p>
+                                Safari (Quicktime이 필요할 것입니다): wav, mp3
+                        </xhtml:p>
+                        <xhtml:p>
+                                Chrome: ogg, mp3, wav
+                        </xhtml:p>
+                        <xhtml:p>
+                                Opera: wav, ogg
+                        </xhtml:p>
+                </answer>
+        </item>
+        <item id="sound-location">
+                <question>경보 사운드 크기 제한은 어느 정도이고 어디로부터 가져올 수 있어요?</question>
+                <answer>
+                        <xhtml:p>
+                            모든 브라우저는 데이터 url을 재생할 수 있습니다. 
+                                그것은 당신이 환경설정에서 제공하는 불러오기 버튼을 사용할 때 내부적으로 저장된 사운드 입니다.
+                                그것은 변환되고 환경설정에 저장되기 때문에 사운드 사이즈는 160KB로 제한됩니다.
+                        </xhtml:p>
+                        <xhtml:p>
+                                모든 브라우저는 인터넷(http url)으로부터 직접 사운드를 재생할 수도 있습니다. 
+                                사운드 링크(예를 들어 http://foxtrick.org/sound.wav)를 해당 사운드 편집 필드에 복사하세요. 사이즈 제하는 없습니다.
+                        </xhtml:p>
+                        <xhtml:p>
+                                Mozilla 브라우저는 또한 하드디스크(파일 url)로부터 사운드를 사이즈 제한 없이 재생할 수 있습니다. 
+                                올바른 포맷을 얻는 가장 쉬운 방법: 
+                                브라우저에서 Ctrl+o를 누르고, 사운드 파일을 탐색하고 그것을 선택하세요. 
+                                상단의 주소 표시줄에 로컬 파일에 대한 권리 링크 입니다(예를 들어 file:///c:/sound.wav).
+                                이것을 복사하고 사운드 편집 필드에 붙여넣으세요.
+                        </xhtml:p>
+                </answer>
+        </item>
         <item id="authorize">
                 <question>팀 데이터를 접근하기 위해서 왜 폭스트릭 사용자 인증을 해야합니까?</question>
                 <answer>
